2003-03-01  John Levon  <levon@movementarian.org>

	* pp/format_output.cpp: use "%" not "%-age"

2003-02-28  John Levon  <levon@movementarian.org>

	* utils/opcontrol: fix IS_TIMER setting, noticed by
	  Duncan Sands

2003-02-28  John Levon  <levon@movementarian.org>

	* configure.in: bump to 0.6cvs

2003-02-28  John Levon  <levon@movementarian.org>

	* doc/Makefile.am: tweak

	* libregex/Makefile.am: fix make dist

2003-02-27  John Levon  <levon@movementarian.org>

	* configure.in: bump to 0.5.1

2003-02-27  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: clarifiy --separate=kernel

2003-02-25  John Levon  <levon@movementarian.org>

	* configure.in: clarify --with-kernel-support

	* libop/op_events.c:
	* module/x86/op_nmi.c:
	* module/ia64/op_nmi.c: remove sanity checking - it's
	  the wrong place to have such code, is a barrier to op_events
	  cleanup, and makes life harder for NDAers.

2003-02-25  Will Cohen <wcohen@redhat.com>

	* utils/opcontrol (do_deinit): Correct search for /dev/oprofile.

2003-02-24  Dave Jones <davej@codemonkey.org.uk>

	* module/x86/op_apic.[c|h]: move NMI gate setup to architecture
	  specific SET_NMI_GATE macro. x86=no change.
	  Make x86-64 use the kernels _set_gate instead of its own open
	  coded variant.

2003-02-23  John Levon  <levon@movementarian.org>

	* version-1.h.in: another rename

2003-02-23  John Levon  <levon@movementarian.org>

	* configure.in: set up OP_DATADIR and OP_BINDIR

	* gui/oprof_start.cpp:
	* libregex/demangle_symbol.cpp: use the above

	* version_tpl.h.in: move to ...

	* version.h.in.in: ... here

2003-02-23  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* configure.in: add AX_COPY_IF_CHANGE() use it to generate version.h
	* .cvsignore: update

	* gui/Makefile.am:
	* gui/oprof_start.cpp:
	* libregex/Makefile.am:
	* libregex/demangle_symbol.cpp: don't use -DBINDIR, rather include
	  version.h to get install path

2003-02-23  John Levon  <levon@movementarian.org>
